<resources>
    <string name="app_name">Magus Buddy</string>
    <string name="menu_home">Home</string>
    <string name="menu_battle">Battle</string>
    <string name="menu_skills">Skills</string>
    <string name="search_hint">Keresés</string>
    <string name="first_level">1. fok</string>
    <string name="second_level">2. fok</string>
    <string name="third_level">3. fok</string>
    <string name="fourth_level">4. fok</string>
    <string name="fifth_level">5. fok</string>
    <string name="description">Description</string>
    <string name="double_digit_number">99</string>
    <string name="mp">Mp</string>
    <string name="emp">Mp/E</string>
    <string name="magustime">1 sz</string>
    <string name="casttime">Varázslás ideje:</string>
    <string name="durationTime">Időtartam:</string>
    <string name="range">Hatótáv:</string>
    <string name="codex">Codex</string>
    <string name="special">Special</string>
    <string name="skill_name">Skill</string>
    <string name="ekp">Kp/E</string>
    <string name="kp">Kp</string>
    <string name="epszi">Ψp/E</string>
    <string name="pszi">Ψp</string>
    <string name="name">Name</string>
    <string name="magic_title">Magic</string>
    <string name="resistance_value">Mentális</string>
    <string name="resistance_name">ME:</string>
    <string name="default_range_value">20 m</string>
    <string name="pszipont">Ψp</string>
    <string name="tipusnev">tipusnev</string>
    <string name="default_range">20 m</string>
    <string name="strengthening_sign">E</string>
    <string name="ke">KÉ:</string>
    <string name="te">TÉ:</string>
    <string name="ve">VÉ:</string>
    <string name="ce">CÉ:</string>
</resources>
