<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:name="com.lazyfools.magusbuddy.QualificationSingleFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/magic_title"
            android:textAlignment="center"
            android:textSize="32sp"
            app:fontFamily="@font/eden_mills_bold" />

        <TextView
            android:id="@+id/type_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tipusnev"
            android:textSize="12sp"
            android:visibility="gone" />

        <include layout="@layout/horizontal_line" />

        <RelativeLayout
            android:id="@+id/stat_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp">
            <LinearLayout
                android:id="@+id/mp_emp_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="35dp"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp">

                <RelativeLayout
                    android:id="@+id/mp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/mp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="32sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/mp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/mp_value"
                        android:layout_toRightOf="@id/mp_value"
                        android:text="@string/mp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/emp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/emp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="24sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/emp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/emp_value"
                        android:layout_toRightOf="@id/emp_value"
                        android:text="@string/emp" />
                </RelativeLayout>
            </LinearLayout>

            <GridLayout
                android:id="@+id/properties_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="6dp"
                android:columnCount="2"
                android:columnOrderPreserved="true"
                android:rowOrderPreserved="true">

                <TextView
                    android:id="@+id/casttime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/casttime" />
                <TextView
                    android:id="@+id/casttime_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/magustime" />

                <TextView
                    android:id="@+id/durationtime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/durationTime" />
                <TextView
                    android:id="@+id/durationtime_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/magustime" />

                <TextView
                    android:id="@+id/range"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/range" />
                <TextView
                    android:id="@+id/range_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/default_range_value" />

                <TextView
                    android:id="@+id/resistance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/resistance_name" />
                <TextView
                    android:id="@+id/resistance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="@string/resistance_value" />
            </GridLayout>
        </RelativeLayout>

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/description"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/table_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/description_table" />
        <TextView
            android:id="@+id/special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>