<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:name="com.lazyfools.magusbuddy.QualificationSingleFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bard_magic"
            android:textAlignment="center"
            android:textSize="32sp"
            app:fontFamily="@font/eden_mills_bold"/>

        <LinearLayout
            android:id="@+id/stat_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/mp_emp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/mp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/mp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="32sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/mp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@id/mp_value"
                        android:layout_toRightOf="@id/mp_value"
                        android:text="@string/mp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/emp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/emp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="24sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/emp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@id/emp_value"
                        android:layout_toRightOf="@id/emp_value"
                        android:text="@string/emp"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/casttime_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/casttime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/casttime" />

                    <TextView
                        android:id="@+id/casttime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/durationtime_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/durationtime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/durationTime" />

                    <TextView
                        android:id="@+id/durationtime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/range_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/range"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/range" />

                    <TextView
                        android:id="@+id/range_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>
</ScrollView>