<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highmagic"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            app:fontFamily="@font/eden_mills_bold" />

        <LinearLayout
            android:id="@+id/stat_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/mp_ekp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/kp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/kp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="32sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/kp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@id/kp_value"
                        android:layout_toRightOf="@id/kp_value"
                        android:text="@string/kp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ekp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ekp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_digit_number"
                        android:textSize="24sp"
                        app:fontFamily="@font/eden_mills_bold" />

                    <TextView
                        android:id="@+id/ekp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@id/ekp_value"
                        android:layout_toRightOf="@id/ekp_value"
                        android:text="@string/ekp"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/casttime_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/casttime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/casttime" />

                    <TextView
                        android:id="@+id/casttime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/durationtime_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/durationtime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/durationTime" />

                    <TextView
                        android:id="@+id/durationtime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/range_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/range"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/range" />

                    <TextView
                        android:id="@+id/range_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/magustime" />
                </RelativeLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/type_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/table_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/description_table" />
    </LinearLayout>
</ScrollView>