<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/qualification_single_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/skill_name"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="32sp"
                app:fontFamily="@font/eden_mills_bold"/>

            <TextView
                android:id="@+id/type_value"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:text="@string/tipusnev" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:background="#202020" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/table_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:context=".page.codex.qualification.QualificationActivity"
                tools:listitem="@layout/description_table" />

            <include layout="@layout/level_description_dropdown_textview"
                android:id="@+id/first_level_dropdown_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <include layout="@layout/level_description_dropdown_textview"
                android:id="@+id/second_level_dropdown_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <include layout="@layout/level_description_dropdown_textview"
                android:id="@+id/third_level_dropdown_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <include layout="@layout/level_description_dropdown_textview"
                android:id="@+id/fourth_level_dropdown_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <include layout="@layout/level_description_dropdown_textview"
                android:id="@+id/fifth_level_dropdown_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>

